[gd_scene load_steps=2 format=3 uid="uid://runnertutorial"]

[ext_resource type="Script" uid="uid://runnertutorialscript" path="res://dino_runner/RunnerTutorial.gd" id="1"]

[node name="RunnerTutorial" type="CanvasLayer"]
process_mode = 3
layer = 250
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.8)

[node name="TutorialPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="TutorialPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Title" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "ü¶ï DINO RUNNER TUTORIAL"
horizontal_alignment = 1

[node name="Instructions" type="Label" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Jump over obstacles and collect power-ups!\n\nüéÆ CONTROLS:\n‚Ä¢ Tap/Space to jump\n‚Ä¢ Avoid obstacles (red rocks)\n‚Ä¢ Collect shields (blue) for protection\n‚Ä¢ Collect hearts for extra lives\n\nüèÉ TIP: Time your jumps carefully!"
horizontal_alignment = 1

[node name="GotItButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Got it! Let's Run"

[node name="SkipButton" type="Button" parent="TutorialPanel/VBox"]
layout_mode = 2
text = "Skip Tutorial"
